--- a/index.html
+++ b/index.html
@@ -3,76 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Web radio Les p'tite tête - Écoutez nos morceaux et interviews exclusives.">
     <title>Les p'tite tête - Web Radio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
-            color: #333;
+            margin: 0;
+            background-color: #121212;
+            color: #f4f4f4;
         }
         header {
             background-color: #ff5722;
             color: #fff;
             padding: 20px;
-            margin-bottom: 20px;
+            text-align: center;
+        }
+        nav {
+            background-color: #333;
+            padding: 15px;
+            text-align: center;
+        }
+        nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav a:hover {
+            color: #ff5722;
         }
         section {
-            margin: 20px;
-        }
-        audio {
-            margin: 10px;
-        }
-        .interview-space {
-            margin-top: 30px;
-            background-color: #e0e0e0;
             padding: 20px;
-            border-radius: 10px;
+            text-align: center;
+        }
+        .options {
+            margin-top: 30px;
+        }
+        .audio-player {
+            margin: 20px auto;
+            max-width: 400px;
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Les p'tite tête - Web Radio</h1>
-        <p>Bienvenue sur notre web radio ! Écoutez nos morceaux et nos interviews.</p>
+        <p>Avec les p'tite tête, vous serez moins bête !</p>
     </header>
-
-    <section id="audio-player">
-        <h2>Morceaux</h2>
-        <div>
-            <!-- Exemple de fichiers audio -->
+    <nav>
+        <a href="#accueil">Accueil</a>
+        <a href="#morceaux">Morceaux</a>
+        <a href="#interviews">Interviews</a>
+    </nav>
+    <section id="accueil">
+        <h2>Bienvenue sur Les p'tite tête</h2>
+        <p>Explorez notre web radio ! Choisissez une option ci-dessus pour commencer :</p>
+        <div class="options">
+            <a href="#morceaux" style="color: #ff5722; font-size: 18px;">🎵 Écouter les morceaux</a><br>
+            <a href="#interviews" style="color: #ff5722; font-size: 18px;">🎙️ Découvrir les interviews</a>
+        </div>
+    </section>
+    <section id="morceaux">
+        <h2>Morceaux en cours</h2>
+        <div class="audio-player">
             <audio controls>
                 <source src="https://URL_de_votre_repository/interwiou/morceau1.mp3" type="audio/mpeg">
                 Votre navigateur ne supporte pas les lecteurs audio.
             </audio>
-            <p>Morceau 1</p>
-        </div>
-        <div>
-            <audio controls>
-                <source src="https://URL_de_votre_repository/interwiou/morceau2.mp3" type="audio/mpeg">
-                Votre navigateur ne supporte pas les lecteurs audio.
-            </audio>
-            <p>Morceau 2</p>
+            <p>Titre : Morceau 1</p>
         </div>
     </section>
-
-    <section class="interview-space">
+    <section id="interviews">
         <h2>Interviews</h2>
-        <p>Retrouvez ici toutes nos interviews !</p>
-        <div>
-            <!-- Exemple de fichiers audio pour les interviews -->
+        <div class="audio-player">
             <audio controls>
                 <source src="https://URL_de_votre_repository/interwiou/interview1.mp3" type="audio/mpeg">
                 Votre navigateur ne supporte pas les lecteurs audio.
             </audio>
-            <p>Interview avec Alice</p>
-        </div>
-        <div>
-            <audio controls>
-                <source src="https://URL_de_votre_repository/interwiou/interview2.mp3" type="audio/mpeg">
-                Votre navigateur ne supporte pas les lecteurs audio.
-            </audio>
-            <p>Interview avec Bob</p>
+            <p>Interview : Alice</p>
         </div>
     </section>
 </body>
