--- a/interviews.html
+++ b/interviews.html
@@ -34,7 +34,7 @@
         <h2>Interviews</h2>
         <div>
             <audio controls>
-                <source src="https://raw.githubusercontent.com/Hackerd-825/Club-radio/refs/heads/main/Interviews/test.mp3?token=GHSAT0AAAAAAC72VGVUYFMS2W4QFBI4UZH2Z7MKJVA" type="audio/mpeg">
+                <source src="https://raw.githubusercontent.com/Hackerd-825/Club-radio/refs/heads/main/Interviews/test.mp3" type="audio/mpeg">
                 Votre navigateur ne supporte pas les lecteurs audio.
             </audio>
             <p>Interview avec Alice</p>
