--- a/interviews.html
+++ b/interviews.html
@@ -34,7 +34,7 @@
         <h2>Interviews</h2>
         <div>
             <audio controls>
-                <source src="https://raw.githubusercontent.com/Hackerd-825/Club-radio/refs/heads/main/Interviews/test.mp3" type="audio/mpeg">
+                <source src="https://raw.githubusercontent.com/Hackerd-825/Club-radio/refs/heads/main/Interviews/test.mp3" type="audio/mp3">
                 Votre navigateur ne supporte pas les lecteurs audio.
             </audio>
             <p>Interview avec Alice</p>
