--- a/public/interviews.html
+++ b/public/interviews.html
@@ -34,14 +34,14 @@
         <h2>Interviews</h2>
         <div>
             <audio controls>
-                <source src="https://github.com/Hackerd-825/Club-radio/raw/refs/heads/main/public/analog-tape-test-tone-from-cassette-1995-101203.mp3" type="audio/mpeg">
+                <source src="https://github.com/Hackerd-825/Club-radio/raw/refs/heads/main/ITW/analog-tape-test-tone-from-cassette-1995-101203%20(1).mp3" type="audio/mpeg">
                 Votre navigateur ne supporte pas les lecteurs audio.
             </audio>
             <p>Interview avec Alice</p>
         </div>
         <div>
             <audio controls>
-                <source src="https://github.com/Hackerd-825/Club-radio/raw/refs/heads/main/public/test-47563.mp3" type="audio/mpeg">
+                <source src="https://github.com/Hackerd-825/Club-radio/raw/refs/heads/main/ITW/test-47563%20(1).mp3" type="audio/mpeg">
                 Votre navigateur ne supporte pas les lecteurs audio.
             </audio>
             <p>Interview avec Bob</p>
